--- a/src/styles/charts/brush.scss
+++ b/src/styles/charts/brush.scss
@@ -4,14 +4,13 @@
 
     .brush-area {
         // fill: url('#brush-area-gradient');
-        fill: #eff2f5;
+        fill: $bc-e-blue-100;
     }
 
     rect.brush-rect.selection {
         // stroke: $bc-e-blue-300;
         // stroke-width: 1;
         // fill-opacity: 0.08;
-        fill: url('#brush-area-gradient');
         fill-opacity: 1;
         stroke-linejoin: round;
         mix-blend-mode: color-burn;
