--- a/docs/styles/bundle.css
+++ b/docs/styles/bundle.css
@@ -140,16 +140,17 @@
   display: none; }
 
 .brush-chart .brush-area {
-  fill: #ccf7f6; }
+  fill: #EFF2F5; }
 
 .brush-chart rect.brush-rect.selection {
   fill-opacity: 1;
+  fill: url("#brush-area-gradient");
   stroke-linejoin: round;
   mix-blend-mode: color-burn; }
 
 .brush-chart rect.brush-rect.handle {
   fill: #00d8d2;
-  width: 0.25rem; }
+  width: 0.2rem; }
 
 .brush-chart .axis path {
   display: none; }
