--- a/src/styles/charts/brush.scss
+++ b/src/styles/charts/brush.scss
@@ -4,7 +4,7 @@
 
     .brush-area {
         // fill: url('#brush-area-gradient');
-        fill: $bc-e-blue-100;
+        fill: $grey-200;
     }
 
     rect.brush-rect.selection {
@@ -12,6 +12,7 @@
         // stroke-width: 1;
         // fill-opacity: 0.08;
         fill-opacity: 1;
+        fill: url('#brush-area-gradient');
         stroke-linejoin: round;
         mix-blend-mode: color-burn;
     }
@@ -19,7 +20,7 @@
     rect.brush-rect.handle {
         fill: $bc-e-blue-300;
         // width: 0.13rem;
-        width: 0.25rem;
+        width: 0.2rem;
     }
 
     // Axes
